docs: bring the IntelliJ instructions back in line with the http4s server (#77)
* docs: bring the IntelliJ instructions back in line with the http4s server

The page still described the Jetty setup. RunWebApp, RunTLSWebApp and
RunMTLSWebApp were removed along with Jetty and web.xml, so the run
section pointed at three classes that no longer exist, and every mode
now starts from bootstrap.http4s.Http4sServer instead. TLS and mutual
TLS moved with them: they are props (mtls.enabled and friends) rather
than a choice of launcher.

The prerequisites were stale in the same direction - JDK 11 and Scala
2.12.12 against a pom that asks for 25 and 2.12.21. Callers who read
<release>17</release> in the pom and set their SDK to 17 hit a wall, so
say why it is there: it pins scalac only, because 2.12.21 accepts
-release no higher than 17.

Add the two setup steps that are not discoverable from the IDE. Rebuild
needs parallel compilation off in both the Compiler page and the Scala
Compile Server, because the Scala plugin appends its own
-Dcompile.parallel after the platform one and the JVM takes the last;
with it on, two JPS resource builders race over the same destination
paths and Rebuild reports copy errors that carry no reason. The
ScalaTest runner needs surefire's --add-opens (without it the framework
dies before the first test) and four props the test script injects as
OBP_ environment variables (without them the dynamic-code suites fail
with OBP-50020). Both belong in the configuration template, since
generated run configurations start empty every time.

Also correct the cert filename, the path to the test sources, and note
that Redis is genuinely required.

* docs: say why the mssql-jdbc driver stays on the jre11 build

The note claimed compatibility "including 21" while the project moved to
25, which reads as though nobody had checked the version we actually run
on, and it called the jre suffix a classifier when it is part of the
version string.

Record what is verifiabl